@@ -1,5 +1,5 @@
-Last generated 2011-11-17
-Coverage: 766/943 (81.23%), w. legacy tests: 875/943 (92.79%)
+Last generated 2011-11-20
+Coverage: 767/944 (81.25%), w. legacy tests: 876/944 (92.80%)
 
 The following tags are not tested by the test suite:
 
