@@ -1,0 +1,1 @@
+E: files-gzip-ma-same: gzip-file-is-not-multi-arch-same-safe usr/share/doc/files-gzip-ma-same/changelog.gz
